src/objects/Clinical_Note_Custom_Note__c.object
<CustomObject>
    <fields>
        <fullName>Clinical_Note_Instance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clinical Note Instance</label>
        <referenceTo>Clinical_Note_Instance__c</referenceTo>
        <relationshipLabel>Clinical_Note_Custom_Note</relationshipLabel>
        <relationshipName>Clinical_Note_Custom_Note</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Clinical_Note__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Custom Clinical Note</label>
        <referenceTo>Custom_Clinical_Note__c</referenceTo>
        <relationshipLabel>Clinical_Note_Custom_Note</relationshipLabel>
        <relationshipName>Clinical_Note_Custom_Note</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Clinical Note Custom Note</label>
    <nameField>
        <displayFormat>CNCN-{0000}</displayFormat>
        <label>Clinical Note Custom Notes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clinical_Note_Custom_Note</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>